@@ -55,7 +55,7 @@ import org.silvertunnel_ng.netlib.layer.tcpip.TcpipNetLayer;
  * @author Apache HttpClient
  * @author hapke
  */
-public class NetlibSocketFactory implements SocketFactory
+public class NetlibSocketFactory implements SocketFactory // TODO : use SchemeSocketFactory instead
 {
 
 	private final NetLayer lowerNetLayer;
@@ -111,8 +111,7 @@ public class NetlibSocketFactory implements SocketFactory
 
 		// open connection without explicit DNS resolution
 		final Map<String, Object> localProperties = new HashMap<String, Object>();
-		localProperties.put(TcpipNetLayer.TIMEOUT_IN_MS, new Integer(
-				timeoutInMs));
+		localProperties.put(TcpipNetLayer.TIMEOUT_IN_MS, Integer.valueOf(timeoutInMs));
 		final TcpipNetAddress remoteNetAddress = new TcpipNetAddress(host, port);
 
 		try
